[package]
name = "coretests"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust.git"
description = "The Rust Core Library"
# If you update this, be sure to update it in a bunch of other places too!
# As of 2024, it was src/tools/opt-dist, the core-no-fp-fmt-parse test and
# the version of the prelude imported in core/lib.rs.
edition = "2021"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true

[dependencies]
gba_test = {path = "../../rust/gba_test/gba_test", features = ["log"]}
mgba_log = "0.2.1"
rand = { version = "0.8.5", default-features = false }
rand_xorshift = { version = "0.3.0", default-features = false }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(bootstrap)',
    'cfg(no_fp_fmt_parse)',
    'cfg(stdarch_intel_sde)',
    # core use #[path] imports to portable-simd `core_simd` crate
    # and to stdarch `core_arch` crate which messes-up with Cargo list
    # of declared features, we therefor expect any feature cfg
    'cfg(feature, values(any()))',
]

